# FoundryAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/agents/: _config.py  clarification_agent.py  idea_agent.py  market_agent.py  product_agent.py  roadmap_agent.py  techstack_agent.py
backend/db/: crud.py  database.py  models.py
backend/frontend/: app.js  index.html
backend/schemas/: state.py
backend/workflow/: graph.py
frontend/: app.js  style.css
